<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item android:id="@+id/profile1"
         android:title="@string/profile"
        />
    <item android:id="@+id/timetable1"
        android:title="@string/timetable"
        />
    <item android:id="@+id/weeklytimetable"
        android:title="@string/weekly_timetable"
        />
    <item android:id="@+id/teacherweeklytimetable"
        android:title="@string/teacher_weekly_time_table"
        />
    <item android:id="@+id/classroomweeklytimetable"
        android:title="Classroom Weekly Time Table"
        />
    <item android:id="@+id/Notice"
        android:title="Notice"
        />

    <item android:id="@+id/feedback"
        android:title="@string/feedback"
        />
    <item android:id="@+id/about"
        android:title="@string/about"
        />
    <item android:id="@+id/logout1"
        android:title="@string/logout"
        />

</menu>